# algo-sandbox

./: .gitignore  README.md
cityrail-game/: CMakeLists.txt  README.md
cityrail-game/include/: node.h  solver.h
cityrail-game/src/: main.cpp  treesolver.cpp
puzzles/employees/: CMakeLists.txt  employee.cpp  employee.h  gtest.cpp  interactive.cpp
scheduling/: CMakeLists.txt  README.md
scheduling/jobshop/: CMakeLists.txt  alloc.h  alloc_test.cpp  backtrack.cpp  benchmark.cpp  bruteforce.cpp
strsearch/: CMakeLists.txt  README.md
strsearch/generate/: testgen.h
strsearch/impl/: hash.cpp  naive.cpp  presearch.cpp  reference.cpp
strsearch/strsearch/: CMakeLists.txt  README.md  bench.cpp  run_tests.cpp
strsearch/strsearch/generate/: testgen.cpp
strsearch/strsearch/impl/: base.cpp  base.h  kmp.cpp  stacksearch.cpp
